[package]
name = "birdnest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
axum = "0.6.1"
config = "0.13.3"
fake = { version = "2.5.0", features = ["derive"] }
futures-util = "0.3.25"
quick-xml = { version = "0.26.0", features = ["serialize"] }
rand = "0.8.5"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.23.0", features = ["full"] }
ttl_cache = "0.5.1"
